# turbine-ingestion

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .sqlfluff  LICENSE  README.md  databricks.yml  mise.toml  pyproject.toml
local_setup/: install-mise  setup.sh  setup_dependencies.sh  setup_mise.sh
resources/notebooks/: turbine_pipeline.ipynb
resources/workflows/: my_project_pipeline.yml  turbine_ingestion.yml
src/data_accelerator/: main.py  spark_functions.py
src/turbine_ingestion/: __init__.py  main.py
src/turbine_ingestion/transforms/: enrich.py
tests/: conftest.py  test_functions.py
