[project]
name = "turbine-ingestion"
version = "0.1.0"
description = "Ingest turbine data using Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark[connect]>=3.5.5",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "databricks-sdk>=0.66.0",
    "pre-commit>=4.2.0",
    "pyright[nodejs]>=1.1.398",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "ruff>=0.13.1",
    "sqlfluff>=3.3.1",
]

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
# addopts = "--connect" # turn on to use Spark Connect for pytest (including VSCode Testing)

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
typeCheckingMode = "basic"
